Terraform files/vpc.tf
resource "aws_vpc" "eks_cluster_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "EKS Cluster VPC"
  }
}
